--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@types/styled-components": "^5.1.26",
     "electron-serve": "^1.1.0",
-    "electron-store": "^8.1.0"
+    "electron-store": "^8.1.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@ant-design/icons": "^4.7.0",
