전체적인 스타일링 적용 1차 완료 호버 및 트랜지션 효과 적용 페이지 라우팅 최적화 약간 진행 1대1 채팅에서 상대방이 없는 상태에서 채팅 메세지 보내기를 하면 오류 나는 것 수정 중

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/styled-components": "^5.1.26",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "sweetalert2": "^11.7.0"
   },
   "devDependencies": {
     "@ant-design/icons": "^4.7.0",
