--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "nextron",
     "dev": "nextron",
-    "build": "nextron build",
+    "build": "next build",
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
